<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:background="@color/colorPrimaryDark"
    tools:context=".Login_SingUp.SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/signup_imageview_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ic_arrow_back_" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:textSize="40sp"
            android:textAllCaps="true"
            android:textColor="@color/colorBlack"
            android:text="@string/createaccount"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/email"
            app:hintTextColor="@color/colorBlack"
            app:boxStrokeColor="@color/colorWhite"
            app:boxStrokeWidthFocused="2dp"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@color/colorBlack"
            app:endIconMode="clear_text"
            app:endIconTint="@color/colorBlack">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:layout_marginBottom="10dp"
                android:drawableLeft="@drawable/ic_email"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/password"
            app:hintTextColor="@color/colorBlack"
            app:boxStrokeColor="@color/colorWhite"
            app:boxStrokeWidthFocused="2dp"
            app:startIconDrawable="@drawable/ic_lock"
            app:startIconTint="@color/colorBlack"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/colorBlack"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/name"
            app:hintTextColor="@color/colorBlack"
            app:boxStrokeColor="@color/colorWhite"
            app:boxStrokeWidthFocused="2dp"
            app:startIconDrawable="@drawable/ic_name"
            app:startIconTint="@color/colorBlack"
            app:endIconMode="clear_text"
            app:endIconTint="@color/colorBlack">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:layout_marginBottom="10dp"
                android:drawableLeft="@drawable/ic_email"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/lastname"
            app:hintTextColor="@color/colorBlack"
            app:boxStrokeColor="@color/colorWhite"
            app:boxStrokeWidthFocused="2dp"
            app:startIconDrawable="@drawable/ic_name"
            app:startIconTint="@color/colorBlack"
            app:endIconMode="clear_text"
            app:endIconTint="@color/colorBlack">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:layout_marginBottom="10dp"
                android:drawableLeft="@drawable/ic_email"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:text="@string/gender"
            android:textSize="20dp"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/rd_group"
            android:layout_marginBottom="20dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rdbtn_Male"
                android:text="@string/male"
                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rdbtn_Female"
                android:text="@string/female"
                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rdbtn_other"
                android:text="@string/other"
                />

        </RadioGroup>

        <Button
            android:id="@+id/signup_btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_button"
            android:shadowColor="@color/colorPrimary"
            android:text="@string/next" />

        <Button
            android:id="@+id/signup_btn_prev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_button"
            android:shadowColor="@color/colorPrimary"
            android:text="@string/previous" />

    </LinearLayout>

</ScrollView>