<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/colorPrimaryDark"
    tools:context=".Login_SingUp.SignUp2Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/signUp2_backview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ic_arrow_back_"
            android:contentDescription="TODO" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:textSize="40sp"
            android:textAllCaps="true"
            android:textColor="@color/colorBlack"
            android:text="@string/createaccount"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/birthdate"
            android:textColor="@color/colorBlack"
            android:textSize="20dp"/>

        <DatePicker
            android:id="@+id/date_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            android:spinnersShown="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emergencycontact"
            android:textColor="@color/colorBlack"
            android:textSize="20dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/contact_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/nickname"
            app:hintTextColor="@color/colorBlack"
            app:boxStrokeColor="@color/colorWhite"
            app:boxStrokeWidthFocused="2dp"
            app:startIconDrawable="@drawable/ic_name"
            app:startIconTint="@color/colorBlack"
            app:endIconMode="clear_text"
            app:endIconTint="@color/colorBlack">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:layout_marginBottom="10dp"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="15dp"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.hbb20.CountryCodePicker
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ccp_autoDetectCountry="true"
            app:ccp_showFlag="true"
            app:ccp_showNameCode="true"
            app:ccp_showFullName="true"
            android:layout_marginBottom="20dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/phonenumber"
            app:hintTextColor="@color/colorBlack"
            app:boxStrokeColor="@color/colorWhite"
            app:boxStrokeWidthFocused="2dp"
            app:startIconDrawable="@drawable/ic_phone"
            app:startIconTint="@color/colorBlack"
            app:endIconMode="clear_text"
            app:endIconTint="@color/colorBlack">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:layout_marginBottom="20dp"
                android:drawablePadding="15dp"
                android:inputType="phone"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/signUp_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_button"
            android:shadowColor="@color/colorPrimary"
            android:text="@string/register" />

        <Button
            android:id="@+id/previous_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_button"
            android:shadowColor="@color/colorPrimary"
            android:text="@string/previous" />

    </LinearLayout>

</ScrollView>