<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.MainScreenFragment"
    android:background="@color/colorPrimaryDark"
    tools:openDrawer="start"
    android:id="@+id/drawer_id">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:layout_gravity="start"
        app:headerLayout="@layout/menu_header"
        app:menu="@menu/main_menu"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp">

            <ImageView
                android:id="@+id/menu_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_menu"/>

            <TextView
                android:layout_width="280dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="30sp"
                android:textAllCaps="true"
                android:textColor="@color/colorBlack"
                android:text="@string/title"
                />

        </RelativeLayout>

        <Button
            android:id="@+id/alert"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"
            android:background="@drawable/red_button"
            android:shadowColor="@color/colorPrimary"
            android:fontFamily="sans-serif-condensed-medium"
            android:textSize="40dp"
            android:text="@string/alert"/>

        <Button
            android:id="@+id/defuse"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"
            android:background="@drawable/green_button"
            android:shadowColor="@color/colorPrimary"
            android:fontFamily="sans-serif-condensed-medium"
            android:textSize="35dp"
            android:text="@string/defuse" />

        <Button
            android:id="@+id/addContacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_button"
            android:shadowColor="@color/colorPrimary"
            android:text="@string/addContact" />

        <TextView
            android:id="@+id/seconds_shower"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"/>

    </LinearLayout>



</androidx.drawerlayout.widget.DrawerLayout>